disables code wrapping and fixes numerical list

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -126,6 +126,7 @@ a {
 
 tt, code, kbd, samp, pre {
   font-family: $monospace;
+  white-space: nowrap;
 }
 
 pre {
